--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 </section></b>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTlUzXTSaN_NMfMGCJLmF3yMaQYsoTVLp3UpEyPqxDqCNHq9ViVoQk45CnnRDYmaUv-N_b8uk2csvrXm1dM9EhUiYcxefwLE2sSM6cFV9T3&s=10" alt=""height=400px><br>
     
-    <a href="honey badger.html">another link</a>
+    <a href="index1.html">another link</a>
 </body>
+
 </html>
